--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Quiz5</string>
     <string name="email">Email</string>
+    <string name="register">Register</string>
+    <string name="registerBtn">Register</string>
 </resources>
