--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="email">Email</string>
     <string name="register">Register</string>
     <string name="registerBtn">Register</string>
+    <string name="register_btn_text">Register</string>
 </resources>
